feat: Rename 'explorer' view to 'lab'
This commit renames the 'explorer' view to 'lab' across the application. This change is reflected in the `View` type, the HUD navigation, and the `App.tsx` component. Additionally, it includes CSS for scrollbar hiding and updates component names for better clarity.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
       canvas {
         pointer-events: none;
       }
+
+      /* Fix for missing scrollbar-hide plugin */
+      .scrollbar-hide {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+      .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+      }
     </style>
   <script type="importmap">
 {
